Redirect after login and register, Add 404 page

--- a/client/src/translations/en.json
+++ b/client/src/translations/en.json
@@ -1,5 +1,6 @@
 {
     "common": {
+        "accountCreated": "Account created",
         "browse": "Browse",
         "close": "Close",
         "createAccount": "Create account",
@@ -7,14 +8,16 @@
         "email": "Email",
         "emailNotChosen": "Email not chosen",
         "googleLoginFailed": "Google login failed. Try again.",
-        "googleLoginInfo": "Log in with the Google account whose email you want to link with your account.",
+        "googleLoginInfo": "Log in with the Google account whose email you want to link with your account. Google account information is not shown to other users.",
         "loggedInAs_email": "Logged in as {{email}}",
         "login": "Login",
         "loginInfo": "Login with your Google account.",
         "loginWithGoogle": "Login with Google",
         "or": "Or",
+        "pageNotFound": "Page not found",
         "register": "Register",
         "registerInfo": "Sign in with your Google account and choose an username which will be displayed with your decks.",
+        "returnToSearchDecks": "Return to search decks",
         "search": "Search",
         "somethingWentWrongTryAgain": "Something went wrong. Try again.",
         "step_number": "Step {{number}}",
