--- a/client/src/translations/fi.json
+++ b/client/src/translations/fi.json
@@ -7,14 +7,16 @@
         "email": "Sähköposti",
         "emailNotChosen": "Sähköpostia ei ole valittu",
         "googleLoginFailed": "Google-kirjautuminen epäonnistui. Yritä uudelleen.",
-        "googleLoginInfo": "Kirjaudu Google-tilille, jonka sähköpostin haluat linkittää käyttäjätiliisi.",
+        "googleLoginInfo": "Kirjaudu Google-tilille, jonka sähköpostin haluat linkittää käyttäjätiliisi. Google-tilin tietoja ei näytetä muille käyttäjille.",
         "loggedInAs_email": "Olet kirjautunut sisään tilillä {{email}}",
         "login": "Kirjaudu",
         "loginInfo": "Kirjaudu Google-tililläsi.",
         "loginWithGoogle": "Kirjaudu Google-tililläsi",
         "or": "Tai",
+        "pageNotFound": "Sivua ei löydy",
         "register": "Rekisteröidy",
         "registerInfo": "Kirjaudu Google-tililläsi ja valitse käyttäjänimi, joka näytetään pakkojesi yhteydessä.",
+        "returnToSearchDecks": "Palaa etsimään pakkoja",
         "search": "Etsi",
         "somethingWentWrongTryAgain": "Jotain meni pieleen. Yritä uudestaan.",
         "step_number": "Vaihe {{number}}",
