Rename deck to cardpack 2/2 and add auth and error middleware

--- a/client/src/translations/en.json
+++ b/client/src/translations/en.json
@@ -18,13 +18,13 @@
         "or": "Or",
         "pageNotFound": "Page not found",
         "register": "Register",
-        "registerInfo": "Sign in with your Google account and choose an username which will be displayed with your decks.",
-        "returnToSearchDecks": "Return to search decks",
+        "registerInfo": "Sign in with your Google account and choose an username which will be displayed with your cardpacks.",
+        "returnToSearchCardpacks": "Return to search cardpacks",
         "search": "Search",
         "somethingWentWrongTryAgain": "Something went wrong. Try again.",
         "step_number": "Step {{number}}",
         "username": "Username",
-        "usernameInfo": "Choose an username which will be displayed with your decks.",
+        "usernameInfo": "Choose an username which will be displayed with your cardpacks.",
         "youHaveToSetUsernameAndGoogleAccountBeforeYouCanContinue": "You have to set username and Google account before you can continue",
         "error": {
             "emailAlreadyTaken": "Email already registered",
