--- a/client/src/translations/en.json
+++ b/client/src/translations/en.json
@@ -13,10 +13,13 @@
         "language": "Language",
         "loggedInAs_email": "Logged in as {{email}}",
         "login": "Login",
-        "loginInfo": "Login with your Google account.",
-        "loginWithGoogle": "Login with Google",
+        "loginInfo": "Log in with your Google account.",
+        "loginWithGoogle": "Log in with Google",
+        "logOut": "Log out",
+        "myCardpacks": "My cardpacks",
         "or": "Or",
         "pageNotFound": "Page not found",
+        "profile": "Profile",
         "register": "Register",
         "registerInfo": "Sign in with your Google account and choose an username which will be displayed with your cardpacks.",
         "returnToSearchCardpacks": "Return to search cardpacks",
