--- a/client/src/translations/fi.json
+++ b/client/src/translations/fi.json
@@ -15,8 +15,11 @@
         "login": "Kirjaudu",
         "loginInfo": "Kirjaudu Google-tililläsi.",
         "loginWithGoogle": "Kirjaudu Google-tililläsi",
+        "logOut": "Kirjaudu ulos",
+        "myCardpacks": "Minun korttipakkani",
         "or": "Tai",
         "pageNotFound": "Sivua ei löydy",
+        "profile": "Profiili",
         "register": "Rekisteröidy",
         "registerInfo": "Kirjaudu Google-tililläsi ja valitse käyttäjänimi, joka näytetään pakkojesi yhteydessä.",
         "returnToSearchCardpacks": "Palaa etsimään pakkoja",
