--- a/client/src/translations/en.json
+++ b/client/src/translations/en.json
@@ -1,11 +1,15 @@
 {
     "common": {
         "accountCreated": "Account created",
+        "amountOfBlackCards": "Amount of black cards",
+        "amountOfWhiteCards": "Amount of white cards",
         "browse": "Browse",
         "cardpack": "Cardpack",
+        "cardpacks": "Cardpacks",
         "close": "Close",
         "createAccount": "Create account",
         "createAccountInfo": "Create account with the given username and Google account.",
+        "description": "Description",
         "email": "Email",
         "emailNotChosen": "Email not chosen",
         "googleLoginFailed": "Google login failed. Try again.",
@@ -17,21 +21,26 @@
         "loginWithGoogle": "Log in with Google",
         "logOut": "Log out",
         "myCardpacks": "My cardpacks",
+        "name": "Name",
         "or": "Or",
         "pageNotFound": "Page not found",
         "profile": "Profile",
         "register": "Register",
         "registerInfo": "Sign in with your Google account and choose an username which will be displayed with your cardpacks.",
-        "returnToSearchCardpacks": "Return to search cardpacks",
+        "returnToBrowseCardpacks": "Return to browse cardpacks",
         "search": "Search",
         "somethingWentWrongTryAgain": "Something went wrong. Try again.",
         "step_number": "Step {{number}}",
+        "user": "User",
         "username": "Username",
         "usernameInfo": "Choose an username which will be displayed with your cardpacks.",
         "youHaveToSetUsernameAndGoogleAccountBeforeYouCanContinue": "You have to set username and Google account before you can continue",
         "error": {
             "emailAlreadyTaken": "Email already registered",
             "usernameAlreadyTaken": "Username already taken"
+        },
+        "stringTemplate": {
+            "pageReportTemplate": "Cardpacks {first} - {last}"
         }
     }
 }
