--- a/client/src/translations/fi.json
+++ b/client/src/translations/fi.json
@@ -42,7 +42,8 @@
             "usernameAlreadyTaken": "Käyttäjänimi on jo käytössä"
         },
         "stringTemplate": {
-            "pageReportTemplate": "Korttipakat {first} - {last}"
+            "pageReportTemplateCardpack": "Korttipakat {first} - {last}",
+            "pageReportTemplateCard": "Kortit {first} - {last}"
         }
     }
 }
