Add cardpack info in cardpack page

--- a/client/src/translations/en.json
+++ b/client/src/translations/en.json
@@ -32,6 +32,7 @@
         "search": "Search",
         "somethingWentWrongTryAgain": "Something went wrong. Try again.",
         "step_number": "Step {{number}}",
+        "text": "Text",
         "user": "User",
         "username": "Username",
         "usernameInfo": "Choose an username which will be displayed with your cardpacks.",
