--- a/client/src/translations/fi.json
+++ b/client/src/translations/fi.json
@@ -32,6 +32,7 @@
         "search": "Etsi",
         "somethingWentWrongTryAgain": "Jotain meni pieleen. Yritä uudestaan.",
         "step_number": "Vaihe {{number}}",
+        "text": "Teksti",
         "user": "Käyttäjä",
         "username": "Käyttäjänimi",
         "usernameInfo": "Valitse käyttäjänimi, joka näytetään pakkojesi yhteydessä.",
