Add code to cardpack model

--- a/client/src/translations/en.json
+++ b/client/src/translations/en.json
@@ -8,6 +8,8 @@
         "cardpack": "Cardpack",
         "cardpacks": "Cardpacks",
         "close": "Close",
+        "code": "Code",
+        "copyCode": "Copy code",
         "createAccount": "Create account",
         "createAccountInfo": "Create account with the given username and Google account.",
         "description": "Description",
