--- a/client/src/translations/fi.json
+++ b/client/src/translations/fi.json
@@ -8,6 +8,8 @@
         "cardpack": "Korttipakka",
         "cardpacks": "Korttipakat",
         "close": "Sulje",
+        "code": "Koodi",
+        "copyCode": "Kopioi koodi",
         "createAccount": "Luo käyttäjätili",
         "createAccountInfo": "Luo käyttäjätili antamallasi käyttäjänimellä ja Google-tilillä.",
         "description": "Kuvaus",
