Add tooltip for cardpack code copy button

--- a/client/src/translations/en.json
+++ b/client/src/translations/en.json
@@ -9,6 +9,7 @@
         "cardpacks": "Cardpacks",
         "close": "Close",
         "code": "Code",
+        "copied": "Copied",
         "copyCode": "Copy code",
         "createAccount": "Create account",
         "createAccountInfo": "Create account with the given username and Google account.",
