--- a/client/src/translations/fi.json
+++ b/client/src/translations/fi.json
@@ -9,6 +9,7 @@
         "cardpacks": "Korttipakat",
         "close": "Sulje",
         "code": "Koodi",
+        "copied": "Kopioitu",
         "copyCode": "Kopioi koodi",
         "createAccount": "Luo käyttäjätili",
         "createAccountInfo": "Luo käyttäjätili antamallasi käyttäjänimellä ja Google-tilillä.",
