Add cardpack creation modal

--- a/client/src/translations/en.json
+++ b/client/src/translations/en.json
@@ -5,19 +5,23 @@
         "amountOfWhiteCards": "Amount of white cards",
         "blackCards": "Black cards",
         "browse": "Browse",
+        "cancel": "Cancel",
         "cardpack": "Cardpack",
         "cardpacks": "Cardpacks",
         "close": "Close",
         "code": "Code",
         "copied": "Copied",
         "copyCode": "Copy code",
+        "create": "Create",
         "createAccount": "Create account",
         "createAccountInfo": "Create account with the given username and Google account.",
+        "createNewCardpack": "Create new cardpack",
         "description": "Description",
         "email": "Email",
         "emailNotChosen": "Email not chosen",
         "googleLoginFailed": "Google login failed. Try again.",
         "googleLoginInfo": "Log in with the Google account whose email you want to link with your account. Google account information is not shown to other users.",
+        "cardpackIsNsfw": "Cardpack is not safe for work (NSFW)",
         "language": "Language",
         "loggedInAs_email": "Logged in as {{email}}",
         "login": "Login",
