--- a/client/src/translations/fi.json
+++ b/client/src/translations/fi.json
@@ -5,19 +5,23 @@
         "amountOfWhiteCards": "Valkoisten korttien määrä",
         "blackCards": "Mustat kortit",
         "browse": "Selaa",
+        "cancel": "Peruuta",
         "cardpack": "Korttipakka",
         "cardpacks": "Korttipakat",
         "close": "Sulje",
         "code": "Koodi",
         "copied": "Kopioitu",
         "copyCode": "Kopioi koodi",
+        "create": "Luo",
         "createAccount": "Luo käyttäjätili",
         "createAccountInfo": "Luo käyttäjätili antamallasi käyttäjänimellä ja Google-tilillä.",
+        "createNewCardpack": "Luo uusi korttipakka",
         "description": "Kuvaus",
         "email": "Sähköposti",
         "emailNotChosen": "Sähköpostia ei ole valittu",
         "googleLoginFailed": "Google-kirjautuminen epäonnistui. Yritä uudelleen.",
         "googleLoginInfo": "Kirjaudu Google-tilille, jonka sähköpostin haluat linkittää käyttäjätiliisi. Google-tilin tietoja ei näytetä muille käyttäjille.",
+        "cardpackIsNsfw": "Korttipakka ei sovi julkisille paikoille (NSFW)",
         "language": "Kieli",
         "loggedInAs_email": "Olet kirjautunut sisään tilillä {{email}}",
         "login": "Kirjaudu",
